EndPoint Crear Peticion de Entrada
Agregada el endpoint de crear peticion de entrada en swager, ruta y controlador, ademas cambios en el modelo de peticiones de entrada
