# src/routes/app.js
@@ -15,6 +15,7 @@ const Bodegas = require("../controllers/Bodegas");
 const Productos = require("../controllers/Productos");
 const Entradas = require("../controllers/Entradas");
 const Salidas = require("../controllers/Salidas");
+const PeticionEntradas = require("../controllers/PeticionEntradas");
 const tokenValidator = require("../middleware/tokenValidator");
 
 
@@ -70,6 +71,9 @@ app.put("/Entradas/actualizar", tokenValidator.rutasProtegidas, Entradas.actuali
 app.post("/Salidas/crear", tokenValidator.rutasProtegidas, Salidas.crear);
 app.get("/Salidas/listar", tokenValidator.rutasProtegidas, Salidas.listar);
 app.put("/Salidas/actualizar", tokenValidator.rutasProtegidas, Salidas.actualizar);
+
+//Peticiones de entrada
+app.post("/PeticionEntradas/crear", tokenValidator.rutasProtegidas, PeticionEntradas.crear);
 
 app.get("/token", (req, res)=>{
    res.send(tokenValidator.generateToken('usuario de prueba'))
